<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f4f6f8"
    tools:context=".MainActivity">

   <View
       android:layout_width="match_parent"
       android:layout_height="200dp"
       android:background="@color/tema" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginLeft="16dp"
       android:layout_marginTop="-100dp"
       android:layout_marginRight="16dp"
       android:layout_marginBottom="16dp"
       android:background="@drawable/bg"
       android:orientation="vertical"
       android:paddingLeft="16dp"
       android:paddingRight="16dp">

      <ImageView
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="30dp"
          android:contentDescription="@string/image"
          android:src="@drawable/images" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="25dp"
          android:gravity="center"
          android:text="@string/login_system"
          android:textSize="25sp"
          android:textStyle="bold" />

      <EditText
          android:id="@+id/hasilUser"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dp"
          android:hint="@string/username"
          android:inputType="textEmailAddress"
          android:autofillHints="true" />

      <EditText
          android:id="@+id/hasilPass"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:autofillHints="true" />

      <Button
          android:id="@+id/btnIntent"
          android:layout_width="349dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="35dp"
          android:background="@color/tema"
          android:text="@string/login"
          tools:ignore="InvalidId" />
   </LinearLayout>

</LinearLayout>