<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEF0F1"
    tools:context=".newActivity2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#4A23B3" />
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/radius_oval"/>

    <RelativeLayout
        android:id="@+id/rl_box"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/radius_box">

        <ImageView
            android:id="@+id/iv_air"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:background="@android:color/background_dark"
            android:src="@drawable/air" />

        <TextView
            android:id="@+id/iv_pdam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtGOVERMANT"
            android:layout_toEndOf="@+id/iv_air"
            android:layout_toRightOf="@+id/iv_air"
            android:textColor="#130925"
            android:textStyle="bold"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/iv_pdam1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-1dp"
            android:layout_marginLeft="-1dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/iv_air"
            android:layout_toRightOf="@+id/iv_air"
            android:text="@string/txtpembayaran"
            android:textColor="#130925"
            android:textStyle="bold"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/iv_pdam2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-1dp"
            android:layout_marginLeft="-1dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/iv_air"
            android:layout_toRightOf="@+id/iv_air"
            android:text="@string/txtdiscound"
            android:textColor="#130925"
            android:textStyle="bold"
            android:padding="10dp"/>

    </RelativeLayout>

</RelativeLayout>